src/test/resources/public/input/typechecking/fail/incorrect_operand/fail01.jova
class Test{

}

class Main {

  public int main() {
    int result;
    
    result = "text" + 1;
    return 0;
  }

}